# agent-receipts

./: .gitignore  PUBLIC-DATA-LICENSE.md  README.md  RECEIPTS-RELIABILITY-LEDGER.md  SKILL.md  driver.mjs  install.ps1  install.sh  package.json  pyproject.toml  receipts-agent-policy.json
.github/workflows/: ci.yml  public-reliability-data.yml
.openai/: hosting.json
.receipts/: checks.toml
docs/: HOW-IT-WORKS.md  PROOF.md
docs/cards/: README.md
docs/superpowers/plans/: 2026-07-15-receipts-prove-command.html  2026-07-15-receipts-prove-command.md
public-data/: README.md
receipts-compiler/: Cargo.toml  README.md  build.rs  build_support.rs
receipts-compiler/examples/: negative_control.rs
receipts-compiler/schemas/: decision_log_record.schema.json  next_pass_packet.schema.json  promotion_record.schema.json  snapshot.schema.json
receipts-compiler/src/: lib.rs  schema.rs
receipts-compiler/src/compiler/: artifacts.rs  brief.rs  calibration.rs  checks.rs  contradictions.rs  crypto.rs  doctor.rs  evidence.rs  gate.rs  imports.rs  index.rs  ingest.rs  journal.rs  lookup.rs  mod.rs  outcomes.rs  packets.rs  privacy.rs  publication.rs  receipts.rs  report.rs  resolutions.rs  run_dir.rs  scoring.rs  session.rs  signals.rs  signed_journal.rs  snapshot.rs
receipts-compiler/tests/: build_source_contract.rs  compile_determinism.rs  init_contract.rs  run_argv_contract.rs  schema_v2_compat.rs
scripts/: ingest-subagent.mjs  readiness.mjs  scrub-self-state.mjs  strict-gate.mjs
skills/claude/: SKILL.md  install.ps1  install.sh
skills/codex/: SKILL.md  install.ps1  install.sh
tests/: calibration_baseline.test.js  engine_identity.test.js  forgiving_ingest.test.js  import_eval.test.js  install_sources.test.js  loop_composites.test.js  m0_trust_semantics.test.js  packet_shape_integrity.test.js  prime_brief.test.js  privacy_projection.test.js  receipts_attestation.test.js  reliability_cards.test.js  rust_engine_commands.test.js  session_outcomes.test.js  static_server.mjs  trainer_smoke_fixture.mjs  worklist_resolutions.test.js
tests/fixtures/: node-test-negative-control.mjs
trainer/: train.py
