[package]
name = "receipts-core"
version = "0.1.1"
edition = "2024"
authors = ["inchwormz <johnrichardmckeown@gmail.com>"]
description = "Explicit-state recurrent synthesis: deterministic packet compiler for AI agent runs. Takes subagent output (evidence.jsonl, verifier findings, raw artifacts) and compiles a schema-validated, hash-provenanced next-pass packet that Prime can reason over without consuming raw subagent prose."
license = "MIT"
repository = "https://github.com/inchwormz/agent-receipts"
homepage = "https://github.com/inchwormz/agent-receipts"
documentation = "https://github.com/inchwormz/agent-receipts/tree/main/receipts-compiler"
readme = "README.md"
keywords = ["ai", "agents", "determinism", "provenance", "compiler"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "receipts-core"
path = "src/bin/receipts_core.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
