[package]
name = "receipts-core"
version = "0.2.0"
edition = "2024"
authors = ["inchwormz <johnrichardmckeown@gmail.com>"]
description = "Explicit-state recurrent synthesis: deterministic packet compiler for AI agent runs. Takes subagent output (evidence.jsonl, verifier findings, raw artifacts) and compiles a schema-validated, hash-provenanced next-pass packet that Prime can reason over without consuming raw subagent prose."
license = "MIT"
repository = "https://github.com/inchwormz/agent-receipts"
homepage = "https://github.com/inchwormz/agent-receipts"
documentation = "https://github.com/inchwormz/agent-receipts/tree/main/receipts-compiler"
readme = "README.md"
keywords = ["ai", "agents", "determinism", "provenance", "compiler"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "receipts"
path = "src/bin/receipts_core.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.8"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
glob = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
toml = "0.9"

[build-dependencies]
sha2 = "0.10"
