[package]
name = "receipts-core"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["inchwormz <johnrichardmckeown@gmail.com>"]
description = "Local-first tamper-evident proof, typed trust, calibrated false-green risk, and reliability cards for AI agent work."
license = "MIT"
repository = "https://github.com/inchwormz/agent-receipts"
homepage = "https://github.com/inchwormz/agent-receipts"
documentation = "https://docs.rs/receipts-core"
readme = "README.md"
keywords = ["ai", "agents", "provenance", "verification", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "receipts"
path = "src/bin/receipts_core.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.8"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
glob = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
toml = "0.9"

[build-dependencies]
sha2 = "0.10"
